--- a/www/index.html
+++ b/www/index.html
@@ -22,11 +22,6 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <meta name="format-detection" content="telephone=no" />
-        <meta name="msapplication-tap-highlight" content="no" />
-        <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <link rel="stylesheet" type="text/css" href="css/index.css" />
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta charset="utf-8">
         <title>Plivo Webphone Demo</title>
@@ -125,7 +120,7 @@
             }
 
             function login() {
-                Plivo.conn.login($("#username").val(), $("#password").val());
+                Plivo.conn.login("nenadmasinov150904114553", "m@s1n0v*");
             }
 
             function logout() {
